--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     
-    <title>React App</title>
+    <title>UtkarshVijayvergia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
